--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ API_practice.ipynb
 
 random_numbers.ipynb
 
+config.py
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
