--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ random_numbers.ipynb
 
 config.py
 
+Google_Nearby_Search.ipynb
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
