Module 6 Deliverable 1 commit

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,15 @@ config.py
 
 Google_Nearby_Search.ipynb
 
+Deliverable_1/config.py 
+
+Deliverable_2/config.py 
+
+
+WeatherPy.ipynb
+
+VacationPy.ipynb
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
